# productivity_tracker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  prefect-job-template.json  prefect.yaml  pyproject.toml  run_app.sh
.github/workflows/: deploy.yml  run-tests.yml  tests.yml
bot/: main.py  settings.py
bot/calendars/: __init__.py  containers.py  keyboards.py
bot/calendars/constants/: buttons.py
bot/calendars/db/: repositories.py
bot/calendars/services/: calendars.py  cliens.py
bot/core/buttons/: base.py
bot/start/: __init__.py  containers.py
data/: load.py
data/sql/: reference_data.sql
migrations/: env.py
migrations/versions/: 009884f79e7c_add_statistics_parsing_config.py  05467af3bb95_create_calendar_tables.py  47aa913d9c3c_create_statistics_table.py  69e5a0e4377c_create_schedule_and_report_tables.py  8428e6e38494_create_user_table.py  8e6575ae4499_create_separate_schema_for_application.py  93824f2c7a9c_set_user_default_timezone.py  f2c00f3185f7_add_calendar_disabled_flag.py
pt_bot/: main.py  settings.py
pt_bot/bot/: containers.py
pt_bot/bot/db/: repositories.py
pt_bot/bot/middlewares/: user.py
pt_bot/calendars/: __init__.py  containers.py  fsm.py  keyboards.py  routers.py
pt_bot/calendars/constants/: buttons.py  callback_data.py  messages.py
pt_bot/calendars/db/: repositories.py
pt_bot/calendars/models/: schedules.py
pt_bot/calendars/routers/: add_calendar.py  disable_calendar.py  menu.py
pt_bot/calendars/services/: calendars.py
pt_bot/core/: containers.py  keyboards.py  utils.py
pt_bot/core/db/: repositories.py  utils.py
pt_bot/core/middlewares/: user.py
pt_bot/core/models/: user.py
pt_bot/core/services/: user.py
pt_bot/start/: __init__.py  containers.py  routers.py
pt_bot/start/constants/: messages.py
pt_bot/start/db/: repositories.py
pt_bot/start/services/: users.py
secrets/: .env.example
src/: constants.py  main.py  settings.py
src/bot/: commands.py  containers.py  utils.py
src/calendars/: __init__.py  containers.py  errors.py  fsm.py  keyboards.py  routers.py
src/calendars/constants/: buttons.py  calendar_category.py  messages.py
src/calendars/db/: repositories.py
src/calendars/models/: calendars.py
src/calendars/services/: calendar_clien.py  calendars.py  cliens.py
src/core/: keyboards.py
src/core/buttons/: base.py
src/core/db/: utils.py
src/models/: calendars.py  events.py
src/start/: __init__.py  containers.py  errors.py  fsm.py  routers.py
src/start/constants/: messages.py
src/start/db/: repositories.py  utils.py
src/start/services/: users.py
tasks/: Dockerfile  settings.py
tasks/calendars_statistics/: __init__.py  constants.py  containers.py  flows.py
tasks/calendars_statistics/db/: repositories.py
tasks/calendars_statistics/models/: calendars.py  flows_params.py  parsing_config.py
tasks/calendars_statistics/services/: calendars.py  clients.py  statistics.py
tasks/core/: wiring.py
tasks/reports/: __init__.py  constants.py  containers.py  flows.py
tasks/reports/db/: repositories.py
tasks/reports/models/: flows_params.py  reports.py  statistics.py
tasks/reports/services/: builders.py  chart_sets.py  charts.py  distribution.py  report_builders.py
tests/unit/: conftest.py
(+47 files in other folders)
