[project]
name = "productivity-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "redis>=5.2.0",
    "ruff>=0.7.1",
    "dependency-injector>=4.42.0",
    "alembic>=1.13.3",
    "aiosql>=12.2",
    "asyncpg>=0.30.0",
    "aiogoogle>=5.13.2",
    "prefect>=3.1.0",
    "prefect-docker>=0.6.1",
    "freezegun>=1.5.1",
    "pygal>=3.0.5",
    "jinja2>=3.1.4",
    "tenacity>=9.0.0",
]

[tool.ruff]
line-length = 110
indent-width = 4
output-format = "full"

target-version = "py311"
exclude = [
    "secrets",
    ".venv*",
    "migrations",
]
src = [
    "pt_bot",
    "tasks",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "B", "W", "Q", "N", "UP", "ANN", "ASYNC", "COM", "DTZ", "LOG", "G", "INP", "PIE", "T20", "PT", "RET", "SIM", "R", "I"]
ignore = ["E999", "D212", "D107", "D203", "ANN101", "ANN204", "B008", "COM812", "ANN401"]
unfixable = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["pt_bot", "tasks", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"**/{tests,docs,tools}/*" = ["E402", "D", "ANN"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"  # default for Unix
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:pydantic._internal.*",
    "ignore:Inheritance class AiohttpSession from ClientSession is discouraged:DeprecationWarning",
]
